# MGeo_finetune_flywheel

./: .gitignore  README.md  README_CN.md  mgeo_finetune.py  pyproject.toml
data/: convert_entity_to_token.py  convert_token_to_entity.py
data/alibaba_opensource_data/bio_token/: alibaba_tokens.jsonl  dev.json
data/alibaba_opensource_data/format_entity_data/: alibaba_formatted_entity.jsonl
entity_tag/: openai_address_tagger.py
entity_tag/prompt/: address_entity_tag_prompt.md  address_level_11_tag_prompt.md
inference_service/: batch_mgeo_request.py  convert_to_11_levels.py  convert_tokens_to_entities.py  inference.py  local_mgeo_client_request.py  mgeo_service.py
