[project]
name = "mgeo-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "datasets==3",
    "modelscope>=1.30.0",
    "pillow>=10.0.0",
    "transformers>=4.56.1",
    "requests>=2.31.0",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "torch>=2.8.0",
    "seqeval>=1.2.2",
    "fastapi>=0.118.2",
    "openpyxl>=3.1.5",
    "uvicorn>=0.37.0",
    "openai>=2.6.1",
    "dotenv>=0.9.9",
]
